# gnss-clock-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
Scripts/: bench_2025.py  build_episodes_v31.py  clk_adapters.py  l6_enrich.py  normalize_l5_v31.py  triage_gps_years.py  validate_l5_v31.py
corr/: __init__.py  benchmarks.py  cli.py  clk.py  clk_adapters.py  codex_state.py  context.py  episodes.py  l5_schema.py  l6_enrich.py  pipeline.py  state.py
docs/: architecture.md  data-quality.md  results.md  schema.md
tests/: test_bench_2025.py  test_clk_adapters.py  test_l6_enrich.py  test_normalize_validate.py  test_pipeline.py  test_smoke.py
tests/data/: episodes_fixture.parquet  final_fixture.parquet  l3_daily_fixture.parquet  l3_fixture.parquet  spike_fixture.csv  spike_fixture.parquet
tests/data/clk/: igu23475_18.clk  rapid_fixture_20250102.clk
